tests/AST/invalid-lhs.bel
# RUN: %not %belalang build --emit ast %s | %FileCheck %s
1 := x

# CHECK:      error: unknown prefix
# CHECK-NEXT:  --> {{.*}}/tests/AST/invalid-lhs.bel:2:3
# CHECK-NEXT:   |
# CHECK-NEXT: 2 | 1 := x
# CHECK-NEXT:   |   ^ unknown prefix
